# rm_aim_for_sm_pellet

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: preprocess.cpp.23801416D1A59743.idx
config/: camera.yaml  pellet.yaml
include/pellet/: config.h  config.hpp  type.hpp
include/pellet/detector/: capture_worker.h  capture_worker.hpp  detect_worker.h  detect_worker.hpp  detector.h  detector.hpp  detector_pipeline.h  detector_pipeline.hpp  frame_packet.hpp  frame_queue.h  frame_queue.hpp
include/pellet/imgprocess/: bg_subtractor.hpp  binarizer.h  candidate_extractor.h  candidate_extractor.hpp  candidate_filter.h  candidate_filter.hpp  candidate_nms.h  candidate_nms.hpp  morphology.h  morphology.hpp  motion_confirm.hpp  preprocess.h  preprocess.hpp  roi_cropper.h  roi_cropper.hpp  three_frame_diff.h  three_frame_diff.hpp
include/pellet/infer/: i_classifier.h  i_classifier.hpp  infer_types.h  ncnn_classifier.h  ncnn_classifier.hpp  onnx_classifier.h  onnx_classifier.hpp  openvino_classifier.h  openvino_classifier.hpp  tensorrt_classifier.h  tensorrt_classifier.hpp
include/pellet/utils/: debug_utils.hpp  image_utils.h  infer_utils.hpp  time_utils.hpp
model/: labels.txt
scripts/: profile_cpu.sh  run_demo.sh  run_train.sh
src/: config.cpp  main.cpp
src/detector/: capture_worker.cpp  detect_worker.cpp  detector.cpp  detector_pipeline.cpp  frame_queue.cpp
src/imgprocess/: bg_subtractor.cpp  binarizer.cpp  candidate_extractor.cpp  candidate_filter.cpp  candidate_nms.cpp  morphology.cpp  motion_confirm.cpp  preprocess.cpp  roi_cropper.cpp  three_frame_diff.cpp
src/infer/: mock_classifier.cpp  ncnn_classifier.cpp  onnx_classifier.cpp  openvino_classifier.cpp  tensorrt_classifier.cpp
src/utils/: debug_utils.cpp  image_utils.cpp  infer_utils.cpp  time_utils.cpp
tests/integration/: test_detector_e2e.cpp
tests/unit/: test_bg_subtractor.cpp  test_candidate_extractor.cpp  test_candidate_filter.cpp  test_candidate_nms.cpp  test_debug_utils.cpp  test_detect_worker_threading.cpp  test_frame_queue_wust_vl.cpp  test_morphology.cpp  test_roi_cropper.cpp  test_three_frame_diff.cpp
tools/: benchmark_detector.cpp  export_model.py  recorder.cpp
train/: train_tiny_CNN.py
train/config/: train.yaml
